--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit==1.47.0
-requests
-pandas
+streamlit-authenticator==0.2.3
 streamlit-aggrid
+pandas
+requests
 supabase
 unidecode
-python-dotenv
-streamlit_authenticator
 bcrypt
+python-dotenv
